--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Exo+2&family=Montserrat:wght@500&family=Nunito+Sans:ital,wght@1,600&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
     <!-- Google Fonts -->
